// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpnseSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $123,456.78
  </p>
</div>
`;

exports[`should correctly render ExpnseSummary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $456.78
  </p>
</div>
`;
